syntax = "proto3";

service Database {
  rpc CreateTable (TableDefinitionRequest) returns (EmptyResponse);
  rpc DropTable (TableRequest) returns (EmptyResponse);
  rpc IsTableExists (TableRequest) returns (BoolResponse);
  rpc find (TableFieldRequest) returns (EntityResponse);
  rpc findMany (TableFieldRequest) returns (EntitiesResponse);
  rpc findAll (TableRequest) returns (EntitiesResponse);
  rpc save (EntityRequest) returns (EntityResponse);
  rpc delete (TableFieldRequest) returns (EmptyResponse);
}

message EmptyResponse {}

enum ColumnDataType {
  Number = 0;
  String = 1;
  Boolean = 2;
}

message ColumnDefinition {
  string name = 1;
  ColumnDataType type = 2;
  bool required = 3;
  bool primaryKey = 4;
}

message TableDefinition {
  repeated string indexBy = 1;
  map<string, ColumnDefinition> columns = 2;
}

message TableDefinitionRequest {
  string tableName = 1;
  TableDefinition definition = 2;
}

message TableRequest {
  string tableName = 1;
}

message TableFieldRequest {
  string tableName = 1;
  string key = 2;
  string value = 3;
}

message BoolResponse {
  bool result = 1;
}

message EntityFieldEntry {
  string key = 1;
  string value = 2;
}

message EntityResponse {
  map<string, string> result = 1;
}

message EntitiesResponse {
  repeated EntityResponse result = 1;
}

message EntityRequest {
  string tableName = 1;
  map<string, string> entity = 2;
}
